SK-78 fixed user click selection, message overflow, user profile flex

--- a/src/styles/GlobalParam.css
+++ b/src/styles/GlobalParam.css
@@ -61,7 +61,7 @@
   line-height: normal;
   font-weight: 200;
 
-  user-select: none;
+  /* user-select: none; */
 }
 
 a {
