--- a/src/styles/info/UserProfile.css
+++ b/src/styles/info/UserProfile.css
@@ -160,8 +160,12 @@
   z-index: 5;
 }
 .profile__container--bottom {
+  flex: 1;
   display: flex;
   flex-direction: column;
+}
+.first-window__container .profile__container--bottom {
+  flex: none;
 }
 .profile__container--bottom .info__link:nth-child(4) {
   margin-bottom: 40px;
@@ -213,6 +217,9 @@
 
   .profile__container--top {
     border-radius: 0 0 var(--border-16) var(--border-16);
+  }
+  .first-window__container .profile__container--bottom {
+    flex: 1;
   }
   .profile__container--bottom {
     flex: 1;
