--- a/src/styles/navigation/NavigationLine.css
+++ b/src/styles/navigation/NavigationLine.css
@@ -8,6 +8,8 @@
   justify-content: space-between;
 
   background-color: transparent;
+
+  user-select: none;
 }
 .navigation__container .active {
   background-color: var(--color-hover-dark);
